[gd_scene load_steps=17 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://Ji.tscn" type="PackedScene" id=2]
[ext_resource path="res://Omni.gd" type="Script" id=3]
[ext_resource path="res://omni_base_background.png" type="Texture" id=4]
[ext_resource path="res://Beats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Trap.tscn" type="PackedScene" id=6]
[ext_resource path="res://Audio.tscn" type="PackedScene" id=7]
[ext_resource path="res://terrain_snow.png" type="Texture" id=8]
[ext_resource path="res://World.gd" type="Script" id=9]
[ext_resource path="res://Health.tscn" type="PackedScene" id=10]
[ext_resource path="res://Soul.tscn" type="PackedScene" id=11]
[ext_resource path="res://Omni.wav" type="AudioStream" id=12]
[ext_resource path="res://icePortal.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1000, 1000 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 450, 450 )

[sub_resource type="RectangleShape2D" id=4]

[node name="Omni" type="Node"]
script = ExtResource( 3 )

[node name="World" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="Ground" type="Area2D" parent="World"]
position = Vector2( -14000, -14000 )
scale = Vector2( 14, 14 )
z_index = -2

[node name="Sprite" type="Sprite" parent="World/Ground"]
position = Vector2( 999.567, 1000.77 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Ground"]
visible = false
position = Vector2( 1000, 1000 )
shape = SubResource( 5 )

[node name="Board" type="Area2D" parent="World"]
position = Vector2( 450, 450 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Board"]
z_index = -1
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="World/Board"]
scale = Vector2( 14.0781, 14.0781 )
z_index = -1
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World"]
shape = SubResource( 4 )

[node name="Trap" parent="World" instance=ExtResource( 6 )]
position = Vector2( -3000, -3000 )

[node name="Ji" parent="World" instance=ExtResource( 2 )]
z_index = 1

[node name="IcePortal" parent="World" instance=ExtResource( 13 )]
position = Vector2( -6570, 7476 )
rotation = 2.35619

[node name="Beats" parent="." instance=ExtResource( 5 )]

[node name="Audio" parent="." instance=ExtResource( 7 )]
position = Vector2( -928, 989 )
stream = ExtResource( 12 )

[node name="Health" parent="." instance=ExtResource( 10 )]
position = Vector2( 860, 36 )

[node name="Soul" parent="." instance=ExtResource( 11 )]
position = Vector2( 730, 35 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 10.0
margin_top = 10.0
margin_right = 510.0
margin_bottom = 510.0
visible_characters = 100
percent_visible = 1.42857
text = "Tricky Tiles
Frigid Fight
Sharp Shooter
Perilous Prize
Diligent Dragonfly 
"
scroll_active = false

[connection signal="player_hit" from="World/Ji" to="Health" method="_on_Ji_player_hit"]
[connection signal="player_move" from="World/Ji" to="." method="_on_Ji_player_move"]
[connection signal="player_move" from="World/Ji" to="World/Board" method="_on_Ji_player_move"]
[connection signal="ready_to_die" from="World/Ji" to="Audio" method="_on_Ji_ready_to_die"]
[connection signal="soul_switch" from="World/Ji" to="Soul" method="_on_Ji_soul_switch"]
[connection signal="tree_entered" from="World/Ji" to="." method="_on_Ji_tree_entered"]
[connection signal="use_omni_gate" from="World/Ji" to="." method="_on_Ji_use_omni_gate"]
[connection signal="timeout" from="Beats" to="." method="_on_Beats_timeout"]
[connection signal="timeout" from="Beats" to="World/Board" method="_on_Beats_timeout"]
[connection signal="timeout" from="Beats" to="World/Ji" method="_on_Beats_timeout"]
